--- a/test/mocks/BUILD
+++ b/test/mocks/BUILD
@@ -1,5 +1,8 @@
+load("@rules_cc//cc:defs.bzl", "cc_library")
+
 cc_library(
     name = "mocks",
+    srcs = ["Arduino.cc"],
     hdrs = ["Arduino.h"],
     visibility = ["//visibility:public"],
     deps = [
